--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 9.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore  Source/Dove.Blog.slnx
     - name: Build
       run: dotnet build Source/Dove.Blog.slnx --no-restore
     - name: Test
