--- a/Source/Dove.Blog.Logic/Dove.Blog.Logic.csproj
+++ b/Source/Dove.Blog.Logic/Dove.Blog.Logic.csproj
@@ -1,9 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net9.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.3.0" />
+        <PackageReference Include="Westwind.AspNetCore.Markdown" Version="3.23.0" />
+        <PackageReference Include="YamlDotNet" Version="16.3.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Dove.Blog.Abstractions\Dove.Blog.Abstractions.csproj" />
+        <ProjectReference Include="..\Dove.Blog.Data\Dove.Blog.Data.csproj" />
+    </ItemGroup>
 
 </Project>
