--- a/Source/Dove.Blog.Tests/Dove.Blog.Tests.csproj
+++ b/Source/Dove.Blog.Tests/Dove.Blog.Tests.csproj
@@ -12,6 +12,14 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
         <PackageReference Include="xunit" Version="2.9.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+        <PackageReference Include="FluentAssertions" Version="8.2.0" />
+        <PackageReference Include="NSubstitute" Version="5.3.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Dove.Blog.Abstractions\Dove.Blog.Abstractions.csproj" />
+        <ProjectReference Include="..\Dove.Blog.Data\Dove.Blog.Data.csproj" />
+        <ProjectReference Include="..\Dove.Blog.Logic\Dove.Blog.Logic.csproj" />
     </ItemGroup>
 
     <ItemGroup>
