--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,22 +25,11 @@ jobs:
     - name: Build
       run: dotnet build Source/Dove.Blog.slnx --no-restore
     - name: Test
-      run: dotnet test Source/Dove.Blog.slnx --no-build --verbosity normal
+      run: dotnet test Source/Dove.Blog.slnx --no-build --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
     - name: Upload test results
-      uses: actions/upload-artifact@v2
-      if: success() || failure()
+      uses: actions/upload-artifact@v4
+      if: ${{ always() }}
       with:
-        name: test-results
-        path: test-results.xml
+        name: dotnet-results-${{ matrix.dotnet-version }}
+        path: TestResults-${{ matrix.dotnet-version }}
 
-  report:
-      runs-on: ubuntu-latest
-      steps:
-      - name: Download test results
-        uses: actions/download-artifact@v2
-        with:
-          name: test-results
-      - name: Publish test results
-        uses: dorny/test-reporter@v2
-        with:
-          sarif_file: test-results.xml
