--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,11 +25,19 @@ jobs:
     - name: Build
       run: dotnet build Source/Dove.Blog.slnx --no-restore
     - name: Test
-      run: dotnet test Source/Dove.Blog.slnx --no-build --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
+      run: dotnet test Source/Dove.Blog.slnx --no-build --logger trx --results-directory "TestResults"
     - name: Upload test results
       uses: actions/upload-artifact@v4
       if: ${{ always() }}
       with:
-        name: dotnet-results-${{ matrix.dotnet-version }}
-        path: TestResults-${{ matrix.dotnet-version }}
+        name: dotnet-results
+        path: TestResults
+    - name: Download test results
+      uses: actions/download-artifact@v2
+      with:
+        name: dotnet-results
+    - name: Publish test results
+      uses: dorny/test-reporter@v2
+      with:
+        sarif_file: test-results.xml
 
