--- a/Source/RazorApp/appsettings.json
+++ b/Source/RazorApp/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "CacheSettings": {
+        "SizeLimit": 1000,
+        "ExpirationScanFrequency": "00:00:30"
+
     }
-  },
-  "AllowedHosts": "*"
 }
