--- a/Source/Dove.Blog.Tests/Dove.Blog.Tests.csproj
+++ b/Source/Dove.Blog.Tests/Dove.Blog.Tests.csproj
@@ -20,6 +20,7 @@
         </PackageReference>
         <PackageReference Include="FluentAssertions" Version="7.2.0" />
         <PackageReference Include="NSubstitute" Version="5.3.0" />
+        <PackageReference Include="XunitXml.TestLogger" Version="6.1.0" />
     </ItemGroup>
 
     <ItemGroup>
