Preliminarily finished Category and Tags pages. Spiced the post list up a bit.

--- a/Source/Dove.Blog.WebApp/appsettings.json
+++ b/Source/Dove.Blog.WebApp/appsettings.json
@@ -1,9 +1,21 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+        "MinimumLevel": "Debug",
+        "WriteTo": [
+            { "Name": "Console" },
+            {
+                "Name": "File",
+                "Args": { "path": "Data/Logs/log.txt" }
+            }
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    },
+
+    "AllowedHosts": "*",
+
+    "CacheSettings": {
+        "SizeLimit": 100,
+        "ExpirationScanFrequency": "00:00:30"
     }
-  },
-  "AllowedHosts": "*"
 }
