--- a/Source/Dove.Blog.Data/Dove.Blog.Data.csproj
+++ b/Source/Dove.Blog.Data/Dove.Blog.Data.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.3.0" />
+      <PackageReference Include="TestableIO.System.IO.Abstractions" Version="22.0.14" />
     </ItemGroup>
 
     <ItemGroup>
