--- a/Source/Dove.Blog.WebApp/Dove.Blog.WebApp.csproj
+++ b/Source/Dove.Blog.WebApp/Dove.Blog.WebApp.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.1" />
+        <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="22.0.14" />
         <PackageReference Include="Westwind.AspNetCore.Markdown" Version="3.23.0" />
     </ItemGroup>
 
@@ -23,5 +24,11 @@
         <ProjectReference Include="..\Dove.Blog.Data\Dove.Blog.Data.csproj" />
         <ProjectReference Include="..\Dove.Blog.Logic\Dove.Blog.Logic.csproj" />
     </ItemGroup>
+
+    <!--
+    <ItemGroup>
+      <None Include="..\..\Data\Posts\butter-chicken.md" Link="wwwroot\data\butter-chicken.md" />
+    </ItemGroup>
+    -->
 
 </Project>
